--- a/BluePix/src/main/resources/static/index.html
+++ b/BluePix/src/main/resources/static/index.html
@@ -13,6 +13,14 @@
 
 <main class="container">
 <h2>Posts</h2>
+<!-- button that will have a hover-over -->
+<div class = "buttonHov"><form name="displayForm"><button type="button" id = "newPostButton" class="btn btn-dark" name = "disp">+</button></form></div>
+<div class = "hoverText"> Add a new Post</div>
+<!-- form creation that will pop-up after clicking on the plus button -->
+<div id = "newPostDiv">
+<form name="newPost"></form>
+</div>
+
 <hr>
 
 <div id="postListDiv">
