added new post button

--- a/BluePix/src/main/resources/static/index.html
+++ b/BluePix/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
 <div class = "hoverText"> Add a new Post</div>
 <!-- form creation that will pop-up after clicking on the plus button -->
 <div id = "newPostDiv">
-<form name="newPost"></form>
+<form id="newPostDisplay"></form>
 </div>
 
 <hr>
