--- a/BluePix/src/main/resources/static/index.html
+++ b/BluePix/src/main/resources/static/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Blue Pix</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="css/main.css" rel= "stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+	crossorigin="anonymous">
+<link href="css/main.css" rel="stylesheet">
 <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-<h1>Blue Pix</h1>
-<hr>
+	<header>
+		<h1 class="text-center text-white">Blue Pix</h1>
+		<hr class="text-white">
+	</header>
 
-<main class="container">
-<h2>Posts</h2>
-<!-- button that will have a hover-over -->
-<div class = "buttonHov"><form name="displayForm"><button type="button" id = "newPostButton" class="btn btn-dark" name = "disp">+</button></form></div>
-<div class = "hoverText"> Add a new Post</div>
-<!-- form creation that will pop-up after clicking on the plus button -->
-<div id = "newPostDiv">
-<form id="newPostDisplay"></form>
-</div>
+	<main class="container mt-4">
+		<!-- Hover button -->
+		<div class="buttonHov">
+			<form name="displayForm">
+				<h2 class="text-white">Posts</h2>
+				<button type="button" id="newPostButton" class="btn btn-dark"
+					name="disp">+</button>
+			</form>
+		</div>
+		<div class="hoverText">Add a new Post</div>
 
-<hr>
+		<!-- Form for new post -->
+		<div id="newPostDiv">
+			<form id="newPostDisplay"></form>
+		</div>
 
-<div id="postListDiv">
+		<hr>
+		<div class="row">
+			<!-- Left Side Column -->
+			<div class="col-md-2 col-12 side-col-color p-3">
+				<p>One of three columns</p>
+			</div>
 
-</div>
+			<!-- Center Column (Main Content) -->
+			<div
+				class="col-md-8 col-12 p-4 border border-secondary shadow-lg pop-out">
+				<div id="postListDiv" class="container-lg"></div>
+			</div>
 
+			<!-- Right Side Column -->
+			<div class="col-md-2 col-12 side-col-color p-3">
+				<p>One of three columns</p>
+			</div>
+		</div>
+	</main>
 
-</main>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 </body>
 </html>
