more qol for hiding the edit and delete button. Finally got the edits to autofull, need to do second press for new post button so it hides after second click

--- a/BluePix/src/main/resources/static/index.html
+++ b/BluePix/src/main/resources/static/index.html
@@ -44,7 +44,9 @@
 			<!-- Center Column (Main Content) -->
 			<div
 				class="col-md-8 col-12 p-4 border border-secondary shadow-lg pop-out">
-				<div id="postListDiv" class="container-lg"></div>
+				<div id="postListDiv" class="container-lg">
+				
+				</div>
 			</div>
 
 			<!-- Right Side Column -->
