working on nav bar, looks good so far. Working on how it would look like for the posting and editing once buttons are clicked. trying to go with figma picture i worked out

--- a/BluePix/src/main/resources/static/index.html
+++ b/BluePix/src/main/resources/static/index.html
@@ -22,9 +22,9 @@
 		<!-- Hover button -->
 		<div class="buttonHov">
 			<form name="displayForm">
-				<h2 class="text-white">Posts</h2>
+				<h2 class="text-white">Posts
 				<button type="button" id="newPostButton" class="btn btn-dark"
-					name="disp">+</button>
+					name="disp">+</button></h2>
 			</form>
 		</div>
 		<div class="hoverText">Add a new Post</div>
@@ -38,7 +38,6 @@
 		<div class="row">
 			<!-- Left Side Column -->
 			<div class="col-md-2 col-12 side-col-color p-3">
-				<p>One of three columns</p>
 			</div>
 
 			<!-- Center Column (Main Content) -->
@@ -51,7 +50,6 @@
 
 			<!-- Right Side Column -->
 			<div class="col-md-2 col-12 side-col-color p-3">
-				<p>One of three columns</p>
 			</div>
 		</div>
 	</main>
